src/opengl/qgl_qpa.cpp
@@ -135,7 +135,7 @@ bool QGLFormat::hasOpenGL()
             ->hasCapability(QPlatformIntegration::OpenGL);
 }
 
-void qDeleteQGLContext(void *handle)
+static void qDeleteQGLContext(void *handle)
 {
     QGLContext *context = static_cast<QGLContext *>(handle);
     delete context;
@@ -177,7 +177,7 @@ bool QGLContext::chooseContext(const QGLContext* shareContext)
         d->valid = d->guiGlContext->create();
 
         if (d->valid)
-            d->guiGlContext->setQGLContextHandle(this,qDeleteQGLContext);
+            d->guiGlContext->setQGLContextHandle(this, 0);
 
         d->glFormat = QGLFormat::fromSurfaceFormat(d->guiGlContext->format());
         d->setupSharing();
